--- a/app/src/main/res/layout/fragment_user_restoring_access.xml
+++ b/app/src/main/res/layout/fragment_user_restoring_access.xml
@@ -29,6 +29,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionGo"
             android:inputType="textShortMessage" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/restore_accaunt_instruction_text"
+        android:text="@string/restore_account_instruction_text"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="12sp"
